# autonomous_robot_explorer

./: '  Capabilities list.txt  LICENSE  README.md  buildingPackage.py  package.xml
Instructions/: Start instructions.txt  installation script  ros2Commands.txt
aruco_detect/: package.xml  setup.py
install/: _local_setup_util_sh.py  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: launch.py
log/: latest_build
maps/: Test_world.launch.py  turtlebot3_world_map.pgm  turtlebot3_world_map.yaml
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/my_package/: package.xml  setup.py
src/py_pubsub/: setup.py
src/waypoint_commander/: setup.py
tb3_controller/: setup.py  turtlebot_brain.py
tb3_controller/Instructions/: ros2_CLI_helper.txt
tb3_controller/install/: local_setup.sh  setup.sh
tb3_controller/log/: latest_build
tb3_controller/tb3_controller/: cont2.py  turtlebot_brain.py
tb3_controller/worlds/: Test_world.launch.py
tmp_aruco_files/: detect_aruco_image.py  main.py  main_all.py  main_precropped.py  process_scans.py
turtlebot_controller_pkg/: package.xml  setup.cfg  setup.py
turtlebot_controller_pkg/turtlebot_controller_pkg/: implementing nav2 with slam.txt  turtlebot_brain.py
tutorials/: fibonacci_action_server.py
tutorials/launch_tutorial/: setup.py
worlds/: Test.world  aruco.launch.py  aruco.world  double_lane.launch.py  double_lane.world  double_lane_small.launch.py  double_lane_small.world  maze.launch.py  maze.world  single_lane.launch.py  single_lane.world
(+198 files in other folders)
